Kubernetes/nginxpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myfirstpod
  labels:
    app: nginx
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
    ports:
    - containerPort: 80
