Kubernetes/back-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-system-service
spec:
  selector:
    app: ticket-system-api
  ports:
    - port: 9002
      protocol: TCP
      targetPort: 9002
