Kubernetes/front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-client
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
