Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: ticket-system-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
        - path: /?(.*)
          backend:
            serviceName: frontend-service
            servicePort: 80
        - path: /api/?(.*)
          backend:
            serviceName: ticket-system-service
            servicePort: 9002
